@@ -154,7 +154,9 @@ public class UserSessionProviderOfflineModelTest extends KeycloakModelTest {
 
                 // Persist 3 created userSessions and clientSessions as offline
                 testApp[0] = realm.getClientByClientId("test-app");
-                session.sessions().getUserSessionsStream(realm, testApp[0]).collect(Collectors.toList())
+                session.sessions().readOnlyStreamUserSessions(realm, testApp[0], -1, -1)
+                        .map(userSessionModel -> session.sessions().getUserSession(realm, userSessionModel.getId()))
+                        .toList()
                         .forEach(userSession -> offlineSessions.put(userSession.getId(), createOfflineSessionIncludeClientSessions(session, userSession)));
 
                 // Assert all previously saved offline sessions found
@@ -285,7 +287,9 @@ public class UserSessionProviderOfflineModelTest extends KeycloakModelTest {
                 sessionManager = new UserSessionManager(session);
                 persister = session.getProvider(UserSessionPersisterProvider.class);
 
-                session.sessions().getUserSessionsStream(realm, realm.getClientByClientId("test-app")).collect(Collectors.toList())
+                session.sessions().readOnlyStreamUserSessions(realm, realm.getClientByClientId("test-app"), -1, -1)
+                        .map(userSessionModel -> session.sessions().getUserSession(realm, userSessionModel.getId()))
+                        .toList()
                         .forEach(userSession -> createOfflineSessionIncludeClientSessions(session, userSession));
             });
 
@@ -422,7 +426,9 @@ public class UserSessionProviderOfflineModelTest extends KeycloakModelTest {
 
         // create offline user and client sessions
         withRealm(realmId, (session, realm) -> {
-            session.sessions().getUserSessionsStream(realm, realm.getClientByClientId("test-app")).collect(Collectors.toList())
+            session.sessions().readOnlyStreamUserSessions(realm, realm.getClientByClientId("test-app"), -1, -1)
+                    .map(userSessionModel -> session.sessions().getUserSession(realm, userSessionModel.getId()))
+                    .toList()
                     .forEach(userSession -> createOfflineSessionIncludeClientSessions(session, userSession));
             return null;
         });
@@ -466,7 +472,8 @@ public class UserSessionProviderOfflineModelTest extends KeycloakModelTest {
 
         // create offline user and client sessions
         List<String> offlineUserSessionIds = withRealm(realmId, (session, realm) -> session.sessions()
-                .getUserSessionsStream(realm, realm.getClientByClientId("test-app"))
+                .readOnlyStreamUserSessions(realm, realm.getClientByClientId("test-app"), -1, -1)
+                .map(userSessionModel -> session.sessions().getUserSession(realm, userSessionModel.getId()))
                 .map(userSession -> {
                             UserSessionModel offlineUserSession = Optional.ofNullable(
                                     session.sessions().getOfflineUserSession(realm, userSession.getId())
@@ -521,8 +528,8 @@ public class UserSessionProviderOfflineModelTest extends KeycloakModelTest {
             InfinispanConnectionProvider provider = session.getProvider(InfinispanConnectionProvider.class);
 
             // skip remote cache load as we are only interested in embedded caches
-            AdvancedCache offlineUSCache = provider.getCache(InfinispanConnectionProvider.OFFLINE_USER_SESSION_CACHE_NAME).getAdvancedCache().withFlags(Flag.SKIP_CACHE_LOAD);
-            AdvancedCache offlineCSCache = provider.getCache(InfinispanConnectionProvider.OFFLINE_CLIENT_SESSION_CACHE_NAME).getAdvancedCache().withFlags(Flag.SKIP_CACHE_LOAD);
+            AdvancedCache<?, ?> offlineUSCache = provider.getCache(InfinispanConnectionProvider.OFFLINE_USER_SESSION_CACHE_NAME).getAdvancedCache().withFlags(Flag.SKIP_CACHE_LOAD);
+            AdvancedCache<?, ?> offlineCSCache = provider.getCache(InfinispanConnectionProvider.OFFLINE_CLIENT_SESSION_CACHE_NAME).getAdvancedCache().withFlags(Flag.SKIP_CACHE_LOAD);
 
             Assert.assertEquals(0, offlineUSCache.size());
             Assert.assertEquals(0, offlineCSCache.size());
